--- a/styling.css
+++ b/styling.css
@@ -25,7 +25,7 @@ html {
 }
 
 #score {
-  background-color: #2ddb36;
+  background-color: #f1ff92;
   color: #888e5f;
   padding: 11px;
   position: absolute;
