--- a/styling.css
+++ b/styling.css
@@ -10,7 +10,7 @@ html {
 #container {
   height: 600px;
   width: 750px;
-  background-color: rgb(30 41 59);
+  background-color: rgb(34, 85, 167);
   margin: 10px auto;
   padding: 20px;
   border-radius: 10px;
